--- a/sheets/02_bnb/bnb.ipynb
+++ b/sheets/02_bnb/bnb.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +90,7 @@
     "        fixation: list of predefined item selections, where 0 means not taken,\n",
     "            1 means fully taken, and None means not fixed\n",
     "        \"\"\"\n",
+    "        # the instances capacity minus the weight of all the selected items.\n",
     "        remaining_capacity = instance.capacity - sum(\n",
     "            item.weight for item, x in zip(instance.items, fixation) if x == 1\n",
     "        )\n",
@@ -100,7 +101,15 @@
     "            key=lambda i: instance.items[i].value / instance.items[i].weight,\n",
     "            reverse=True,\n",
     "        )\n",
+    "        # Dont take the first items, if they are all over the capacity.\n",
+    "        first_selected = False;\n",
     "        for i in remaining_indices:\n",
+    "            if not first_selected and instance.items[i].weight > remaining_capacity:\n",
+    "                selection[i] = 0.0\n",
+    "                continue\n",
+    "            else:\n",
+    "                first_selected = True;\n",
+    "\n",
     "            # Fill solution with items sorted by value/weight\n",
     "            if instance.items[i].weight <= remaining_capacity:\n",
     "                selection[i] = 1.0\n",
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +157,9 @@
     "    ) -> typing.Generator[FractionalSolution, None, None]:\n",
     "        # Maybe we can also obtain a feasible solution from fractional solutions?\n",
     "        # It doesn't have to be perfect...\n",
-    "        if (\n",
-    "            node.relaxed_solution.is_fractionally_feasible()\n",
-    "            and node.relaxed_solution.is_integral()\n",
-    "        ):\n",
-    "            yield node.relaxed_solution"
+    "        if node.relaxed_solution.is_fractionally_feasible():\n",
+    "            # Only take the items that can definitely fit.\n",
+    "            yield FractionalSolution(instance=instance, selection=[int(selection) for selection in node.relaxed_solution.selection])"
    ]
   },
   {
@@ -174,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +192,8 @@
     "    # The returned value must be comparable.\n",
     "    # It can be a number, a tuple, or any other comparable object.\n",
     "    # If my_search_order(a)<my_search_order(b), then a is selected first.\n",
-    "    return 1"
+    "    # Select the solution with the most value first\n",
+    "    return 1 / node.relaxed_solution.value()"
    ]
   },
   {
@@ -208,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,8 +237,8 @@
     "        assert (\n",
     "            fractional_node.relaxed_solution.is_fractionally_feasible()\n",
     "        ), \"Node is feasible\"\n",
-    "        # find the index of the first non-fixed variable\n",
-    "        first_unfixed_idx = min(\n",
+    "        # find the index of the last non-fixed variable\n",
+    "        first_unfixed_idx = max(\n",
     "            i for i, x in enumerate(fractional_node.branching_decisions) if x is None\n",
     "        )\n",
     "        yield from fractional_node.branching_decisions.split_on(first_unfixed_idx)"
@@ -263,9 +271,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodes: The number of nodes processed so far of the number of nodes created.\n",
+      "Depth: The depth of the current node in the search tree.\n",
+      "Status: The status of the current node.\n",
+      "Value: The value of the current node.\n",
+      "UB: The upper bound after processing the node.\n",
+      "LB: The lower bound after processing the node.\n",
+      "\n",
+      "     Nodes      Depth   Status        Value         UB         LB\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|0|0|0|0|0] of value 5\n",
+      "       1/3          0   Branched      5.833      5.833          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|0|0|0|0|0] of value 5\n",
+      "       2/5          1   Branched      5.833      5.833          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|0|0|0|0|0] of value 5\n",
+      "       3/7          2   Branched      5.833      5.833          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|0|0|0|0|0] of value 5\n",
+      "       4/9          3   Branched      5.833      5.833          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|0|0|0|0|0] of value 5\n",
+      "      5/11          4   Branched      5.833        5.8          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|1|0|0|0|0] of value 5\n",
+      "      6/13          5   Branched        5.8       5.75          5\n",
+      "\tNew solution found by heuristics: [1|1|1|0|1|1|0|0|0|0] of value 5\n",
+      "      7/15          6   Branched       5.75      5.667          5\n",
+      "\tNew solution found by heuristics: [1|1|0|1|1|1|0|0|0|0] of value 5\n",
+      "      8/17          7   Branched      5.667        5.6          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|0|1|0|0|0] of value 5\n",
+      "      9/19          4   Branched        5.6        5.6          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|0|1|0|0|0] of value 5\n",
+      "     10/21          5   Branched        5.6        5.5          5\n",
+      "\tNew solution found by heuristics: [1|0|1|1|1|1|0|0|0|0] of value 5\n",
+      "     11/23          8   Branched        5.5        5.5          5\n",
+      "\tNew solution found by heuristics: [1|1|1|0|1|0|1|0|0|0] of value 5\n",
+      "     12/25          6   Branched        5.5        5.4          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|0|0|1|0|0] of value 5\n",
+      "     13/27          3   Branched        5.4        5.4          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|0|0|1|0|0] of value 5\n",
+      "     14/29          4   Branched        5.4        5.4          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|0|0|1|0|0] of value 5\n",
+      "     15/31          5   Branched        5.4      5.333          5\n",
+      "\tNew solution found by heuristics: [1|1|0|1|1|0|1|0|0|0] of value 5\n",
+      "     16/33          7   Branched      5.333       5.25          5\n",
+      "\tNew solution found by heuristics: [1|1|1|0|0|1|1|0|0|0] of value 5\n",
+      "     17/35          5   Branched       5.25       5.25          5\n",
+      "\tNew solution found by heuristics: [1|1|1|0|1|0|0|1|0|0] of value 5\n",
+      "     18/37          6   Branched       5.25       5.25          5\n",
+      "\tNew solution found by heuristics: [1|1|1|0|0|1|1|0|0|0] of value 5\n",
+      "     19/39          6   Branched       5.25        5.2          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|0|0|0|1|0] of value 5\n",
+      "     20/41          2   Branched        5.2        5.2          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|0|0|0|1|0] of value 5\n",
+      "     21/43          3   Branched        5.2        5.2          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|0|0|0|1|0] of value 5\n",
+      "     22/45          4   Branched        5.2        5.2          5\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|0|0|0|1|0] of value 5\n",
+      "     23/47          5   Branched        5.2        5.0          5\n",
+      "\n",
+      "Search finished in 23 iterations and 47 created nodes.\n",
+      "The optimal solution is [1|1|1|1|1|0|0|0|0|0] with value 5.\n",
+      "Visualization saved to output.html\n"
+     ]
+    }
+   ],
    "source": [
     "instance = Instance(\n",
     "    items=[\n",
@@ -303,9 +376,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodes: The number of nodes processed so far of the number of nodes created.\n",
+      "Depth: The depth of the current node in the search tree.\n",
+      "Status: The status of the current node.\n",
+      "Value: The value of the current node.\n",
+      "UB: The upper bound after processing the node.\n",
+      "LB: The lower bound after processing the node.\n",
+      "\n",
+      "     Nodes      Depth   Status        Value         UB         LB\n",
+      "\tNew solution found by heuristics: [1|1|1|1|0|0|0|0|0|0|0|0] of value 40\n",
+      "       1/3          0   Branched       65.0       65.0         40\n",
+      "\tNew solution found by heuristics: [1|1|1|0|0|0|0|0|0|0|0|1] of value 60\n",
+      "       2/5          1   Branched       65.0       65.0         60\n",
+      "\tNew solution found by heuristics: [1|1|1|0|0|0|0|0|0|0|0|1] of value 60\n",
+      "       3/7          2   Branched       65.0       65.0         60\n",
+      "\tNew solution found by heuristics: [1|1|1|0|0|0|0|0|0|0|0|1] of value 60\n",
+      "       4/9          3   Branched       65.0       65.0         60\n",
+      "\tNew solution found by heuristics: [1|1|1|0|0|0|0|0|0|0|0|1] of value 60\n",
+      "      5/11          4   Branched       65.0       65.0         60\n",
+      "\tNew solution found by heuristics: [1|1|1|0|0|0|0|0|0|0|0|1] of value 60\n",
+      "      6/13          5   Branched       65.0       65.0         60\n",
+      "\tNew solution found by heuristics: [1|1|1|0|0|0|0|0|0|0|0|1] of value 60\n",
+      "      7/15          6   Branched       65.0       65.0         60\n",
+      "\tNew solution found by heuristics: [1|1|1|0|0|0|0|0|0|0|0|1] of value 60\n",
+      "      8/17          7   Branched       65.0       65.0         60\n",
+      "\tNew solution found by heuristics: [1|1|1|0|0|0|0|0|0|0|0|1] of value 60\n",
+      "      9/19          8   Branched       65.0     63.333         60\n",
+      "\tNew solution found by heuristics: [1|1|0|1|0|0|0|0|0|0|0|1] of value 60\n",
+      "     10/21          9   Branched     63.333       60.0         60\n",
+      "\n",
+      "Search finished in 10 iterations and 21 created nodes.\n",
+      "The optimal solution is [1|1|1|0|0|0|0|0|0|0|0|1] with value 60.\n",
+      "Visualization saved to output.html\n"
+     ]
+    }
+   ],
    "source": [
     "instance = Instance(\n",
     "    items=[\n",
@@ -345,9 +457,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodes: The number of nodes processed so far of the number of nodes created.\n",
+      "Depth: The depth of the current node in the search tree.\n",
+      "Status: The status of the current node.\n",
+      "Value: The value of the current node.\n",
+      "UB: The upper bound after processing the node.\n",
+      "LB: The lower bound after processing the node.\n",
+      "\n",
+      "     Nodes      Depth   Status        Value         UB         LB\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "       1/3          0   Branched    175.741    175.741        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "       2/5          1   Branched    175.741    175.741        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "       3/7          2   Branched    175.741    175.741        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "       4/9          3   Branched    175.741    175.741        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "      5/11          4   Branched    175.741    175.741        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "      6/13          5   Branched    175.741    175.741        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "      7/15          6   Branched    175.741    175.526        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "      8/17          7   Branched    175.526    175.526        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "      9/19          8   Branched    175.526    175.526        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "     10/21          9   Branched    175.526    175.526        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "     11/23         10   Branched    175.526    174.706        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "     12/25         11   Branched    174.706    173.462        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "     13/27         12   Branched    173.462    173.462        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|1|0|0|0|0|0|0|0|0] of value 170\n",
+      "     14/29         13   Branched    173.462    172.304        170\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|0|0|1|0|0|0|0|0|0] of value 171\n",
+      "     15/31          7   Branched    172.304    172.304        171\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|0|0|1|0|0|0|0|0|0] of value 171\n",
+      "     16/33          8   Branched    172.304    172.105        171\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|0|0|1|0|0|0|0|0|0] of value 171\n",
+      "     17/35          9   Branched    172.105    172.105        171\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|0|0|1|0|0|0|0|0|0] of value 171\n",
+      "     18/37         10   Branched    172.105    171.941        171\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|0|0|1|0|0|0|0|0|0] of value 171\n",
+      "     19/39         11   Branched    171.941    171.692        171\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|0|0|1|0|0|0|0|0|0] of value 171\n",
+      "     20/41         12   Branched    171.692    171.692        171\n",
+      "\tNew solution found by heuristics: [1|1|1|1|1|1|0|1|0|0|1|0|0|1|0|0|0|0|0|0] of value 171\n",
+      "     21/43         13   Branched    171.692      171.0        171\n",
+      "\n",
+      "Search finished in 21 iterations and 43 created nodes.\n",
+      "The optimal solution is [1|1|1|1|1|1|0|1|0|0|1|0|0|1|0|0|0|0|0|0] with value 171.\n",
+      "Visualization saved to output.html\n"
+     ]
+    }
+   ],
    "source": [
     "instance = Instance(\n",
     "    items=[\n",
@@ -409,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
